--- a/docs/redis/数据结构.md
+++ b/docs/redis/数据结构.md
@@ -109,7 +109,7 @@ Redis根据当前值的类型和长度决定使用哪种编码实现。
 
 - intset整数集合
 
-- - 集合中元素都是整数，且个数小于512个时使用ziplist
+- - 集合中元素都是整数，且个数小于512时使用intset
 
 - hashtable哈希表
 
